# yag

./: CMakeLists.txt  README.md  main.cpp  main3.cpp
Advanced Algorithm/Binary Indexed Tree/: Inverse Number.cpp  temp1.cpp  temp2.cpp  temp3.cpp
Advanced Algorithm/SegmentTree/: range_color.cpp  range_getAcreage.cpp  range_max.cpp  range_sum.cpp
C++Function/: C++Function.cpp  Greater_Less_sort.cpp  algorithm.cpp  kuaishou copy.cpp  kuaishou.cpp  map.cpp  memtest.cpp  to_string.cpp
Dynamic Programming/: 85 Maximal Rectangle.cpp
Dynamic Programming/Knapsack/: 1. 01Knapsack_Ksum.cpp  3. Multiple_Knapsack1.cpp  6. group_Knapsack.cpp
Dynamic Programming/ZhuangTaiYaSuo/: POJ3254Corn Fields.cpp
Dynamic Programming/one/: LeetCode 300. Longest Increasing Subsequence.cpp
Dynamic Programming/状态压缩/: P2622.cpp
Graph/: 基础.cpp
KickStart/: 1124.cpp
KickStart/2018/: B.cpp  test.cpp
KickStart/2019/: C-1.cpp  D.cpp  D3.cpp  DDD.cpp  Syloviaely-0000000000151893.cpp  Syloviaely-0000000000152746.cpp  rest.cpp
LeetCode/LeetCodeMy/: 10.regular-expression-matching.cpp  1124.lowest-common-ancestor-of-deepest-leaves.cpp  1138.alphabet-board-path.cpp  1139.largest-1-bordered-square.cpp  1144.cpp  12.integer-to-roman.cpp  131.palindrome-partitioning.cpp  132.palindrome-partitioning-ii.cpp  139.word-break.cpp  25.reverse-nodes-in-k-group.cpp  26.remove-duplicates-from-sorted-array.cpp  28.implement-str-str.cpp  300.longest-increasing-subsequence.cpp  403.cpp  (+22 more)
Math/: BigInteger.cpp  快速幂.cpp
Others/: basic.cpp  test.cpp
Typical Algorithm/: prime number.cpp
设计模式/: 25_解析器.cpp
(+53 files in other folders)
