cmake_minimum_required(VERSION 3.17)
project(yag)

set(CMAKE_CXX_STANDARD 14)

add_executable(yag main.cpp)
#add_executable(1624 LeetCode/1624.cpp)
#add_executable(1124 LeetCode/1124.cpp)
#add_executable(algorithm C++Function/algorithm.cpp)
#add_executable(1626 LeetCode/1626.cpp)
#add_executable(map C++Function/map.cpp)
#add_executable(basic Others/basic.cpp)
#add_executable(binarytree DFS/binarytree.cpp)